# microbe-bpe

./: .gitignore  .gitmodules  README.md  build_genome_corpus.py  extract_bpe_features.py  extract_evo2_features.py  make_figures.py  pyproject.toml  report_intrinsic.py  requirements-evo2.txt  requirements.txt  run_comparison.py
data/: domain_bpe_1024_features.meta.json  domain_bpe_512_features.meta.json  evo2_bpe_features.meta.json  evo2_features.meta.json  kmer_4_features.meta.json  single_nt_features.meta.json
microbe_bpe/: __init__.py  genome_corpus.py  intrinsic.py  mf_bridge.py  tiny_lm.py  tokenizers.py
paper/: paper.tex  sec_microbe_downstream.tex
results/: comparison.md  intrinsic.md  leaderboard.md
scripts/: lambda_run.sh  run_evo2_gpu.sh  run_smoke.sh  setup.sh
tests/: test_pipeline.py
